welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: class Array takes type parameters
def read():Array = {
           ^Array1:12: error: class Array takes type parameters
def read():Array = {
           ^Array1:16: error: not found: value getColorSol
    c(i) = getColorSol()
           ^Array1:17: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to (java.awt.Color)
    ecritMessage(c(i))
    ^Array1:31: error: not found: value setBrossCouleur
    setBrossCouleur(c(i))
    ^Array1:31: error: not found: value c
    setBrossCouleur(c(i))
                    ^